--- a/vignettes/my-vignette.Rmd
+++ b/vignettes/my-vignette.Rmd
@@ -77,14 +77,14 @@ We can also see the total number of dives which exist in this dataset:
 sort(unique(whale_data$dive_num))
 ```
 
-From here, we see 10 unique dives. Notice that we also have zeros, which indicate that the whale is at the surface and is not currently engaged in a dive. It should be noted that dives are only considered true dives if they exceed 3 meters in depth. As such, any dives which are not below 3 meters and not constituted as dives. Plotting this TDR data, and making the surface portions in red, and labelling the true dives, we get the following:
+From here, we see 9 unique dives. Notice that we also have zeros, which indicate that the whale is at the surface and is not currently engaged in a dive. It should be noted that dives are only considered true dives if they exceed 3 meters in depth. As such, any dives which are not below 3 meters and not constituted as dives. Plotting this TDR data, and making the surface portions in red, and labelling the true dives, we get the following:
 
 ```{r, fig.width=7, fig.height=5}
 ggplot(whale_data, aes(x = time, y = depth, color = factor(dive_num))) +
   geom_path(aes(group = 1))
 ```
 
-From the above plot, all the lines in red are considered surface level behaviour and are not considered dives. The remaining dives are labelled from 1 to 10 as shown. 
+From the above plot, all the lines in red are considered surface level behaviour and are not considered dives. The remaining dives are labelled from 1 to 9 as shown. 
 
 
 
@@ -145,5 +145,20 @@ u <- r$bottom_phase_data
 u
 ```
 
+## Modelling
 
+A simple bottom phase definition that is used in the literature is "percent of maximum depth" wherein the bottom phase is defined as the time between the first and last occurrence when the animal reaches X% of its maximum depth. Normally, X is 70% or 80%. A simple extension to this method is to estimate X from the data. The function `percent_max_depth` does exactly this. Using the output from the Shiny App (from the results function), we can easily estimate this percentage threshold. 
+
+`percent_max_depth` takes two parameters: `full_data`, which is the complete dataset that we read in earlier; and `responses` which is the dataframe that we get from the `results` function. We implement this function as follows:
+
+```{r, eval=FALSE}
+percent_max_depth(whale_data, u)
+```
+
+We get output as follows:
+
+```{r}
+# > [1] "The percentage threshold (of max depth) for the start: 68.1%"
+# > [2] "The percentage threshold (of max depth) for the end: 65%"  
+```
 
